--- a/5.1_advanced-kui-tour-of-heroes-releases--/package.json
+++ b/5.1_advanced-kui-tour-of-heroes-releases--/package.json
@@ -78,6 +78,7 @@
     "karma-coverage": "~2.1.0",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
+    "tailwindcss": "^3.1.8",
     "typescript": "~4.6.2"
   }
 }
