--- a/5.1_advanced-plugins--/package.json
+++ b/5.1_advanced-plugins--/package.json
@@ -26,6 +26,7 @@
     "@angular-devkit/build-angular": "~13.3.5",
     "@angular/cli": "~13.3.5",
     "@angular/compiler-cli": "~13.3.0",
+    "@tailwindcss/forms": "^0.5.2",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
     "autoprefixer": "^10.4.8",
